--- a/app/templates/details.hbs
+++ b/app/templates/details.hbs
@@ -15,9 +15,9 @@
     {{/card.title}} --}}
     
     {{#card.content class="layout-row layout-align-space-between"}}
-        {{#card.media size="xl"}}
+        {{#card.media}}
           <div class="card-media">
-          	<img src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{model.poster_path}}" alt="Image" title={{model.title}} style="width:160px;height:160px">
+          	<img src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{model.poster_path}}" alt="Image" title={{model.title}} style="width:300px;height:300px">
           </div>
         {{/card.media}}
         {{#card.content}}
@@ -28,11 +28,12 @@
         <p>
         	Popularity: {{model.popularity}}
         </p>
+        <p>Overview: {{model.overview}}</p>
         {{/card.content}}
     {{/card.content}}    
         {{#card.actions class="layout-column"}}
           {{#paper-button}}Add to Favourites{{/paper-button}}
         {{#paper-button}}Delete{{/paper-button}}
         {{/card.actions}}
-    {{!-- {{/card.content}} --}}
+    
 {{/paper-card}}
