--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,20 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{!-- {{welcome-page}} --}}
-{{!-- Feel free to remove this! --}}
-
-{{!-- {{outlet}} --}}
-<h3>Movie</h3>
+{{#paper-toolbar}}
+  {{#paper-toolbar-tools}}
+    {{#paper-button}}
+    	{{#link-to "trending" class="button"}}
+      Home
+      	{{/link-to}}
+    {{/paper-button}}
+    {{#paper-button}}
+    Favourites
+    {{/paper-button}}
+    {{!-- <span class="flex"></span> --}}
+    {{!-- {{#paper-button iconButton=true}}
+      {{paper-icon "favorite"}}
+    {{/paper-button}}
+    {{#paper-button iconButton=true}}
+      {{paper-icon "more_vert"}}
+    {{/paper-button}} --}}
+  {{/paper-toolbar-tools}}
+{{/paper-toolbar}}
 {{outlet}}
