--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 {{#paper-toolbar}}
   {{#paper-toolbar-tools}}
     {{#paper-button}}
-    	{{#link-to "trending" class="button"}}
+    	{{#link-to "trending" }}
       Home
       	{{/link-to}}
     {{/paper-button}}
