--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,20 +1,20 @@
 {{#paper-toolbar}}
   {{#paper-toolbar-tools}}
     {{#paper-button}}
-    	{{#link-to "trending" }}
-      Home
-      	{{/link-to}}
+      {{#link-to "trending" }}
+        Home
+      {{/link-to}}
     {{/paper-button}}
+    {{#link-to "favourite"}}
+    {{#paper-button}}  
+        Favourites
+    {{/paper-button}}
+    {{/link-to}}
+    {{#link-to "search"}}
     {{#paper-button}}
-    Favourites
+        Search
     {{/paper-button}}
-    {{!-- <span class="flex"></span> --}}
-    {{!-- {{#paper-button iconButton=true}}
-      {{paper-icon "favorite"}}
-    {{/paper-button}}
-    {{#paper-button iconButton=true}}
-      {{paper-icon "more_vert"}}
-    {{/paper-button}} --}}
+    {{/link-to}}   
   {{/paper-toolbar-tools}}
 {{/paper-toolbar}}
 {{outlet}}
