--- a/app/templates/favourite.hbs
+++ b/app/templates/favourite.hbs
@@ -1,13 +1,9 @@
 {{outlet}}
 <h2>FAVOURITES</h2>
-{{!-- <div class="container">
-{{#each  as ||}}
-	
-    {{#paper-card as |card|}}
-      <img src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{movie.poster_path}}" alt="Image" title={{movie.title}} style="width:300px;height:300px">
-      {{#card.actions class="layout-column"}}
-        {{#paper-button}}Delete{{/paper-button}} 
-      {{/card.actions}} 
-    {{/paper-card}}
+
+{{#each model as |movie|}}
+	{{#paper-card as |card|}}
+		<img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" alt="Image" title={{movie.title}} style="width:300px;height:300px">
+		{{#paper-button onClick=(action 'delete' movie)}}Delete{{/paper-button}}
+	{{/paper-card}}
 {{/each}}
-</div> --}}
